# cognitive-training-game

./: .gitignore  CMakeLists.txt  README.md  project_audio_code.c  project_mazemodified_code.c  project_player_code.c
controller/: controller.ino  queue.c  queue.cpp  queue.h
include/: audio.h  graph.h  gui.h  maze.h  player.h
src/: audio.c  graph.c  gui.c  main.c  maze.c  player.c
